<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TodoItemLabel"
        android:id="@+id/textViewDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/todo_item_date_label"
        android:paddingEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detailsBarrier"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/textViewStatusLabel" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/detailsBarrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewDateLabel" />

    <TextView
        style="@style/TodoItemLabel"
        android:id="@+id/textViewStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_item_status_label"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/textViewDescriptionLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detailsBarrier"
        app:layout_constraintTop_toBottomOf="@id/textViewDateLabel" />

    <TextView
        style="@style/TodoItemLabel"
        android:id="@+id/textViewStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/detailsBarrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewStatusLabel" />

    <TextView
        style="@style/TodoItemLabel"
        android:id="@+id/textViewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_item_description_label"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewStatusLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detailsBarrier" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="20"
        android:ellipsize="end"
        app:layout_constraintLeft_toRightOf="@id/detailsBarrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewDescriptionLabel" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/detailsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="textViewDateLabel,textViewStatusLabel,textViewDescriptionLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        android:layout_marginTop="16dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>